Wireframe - fixing box model parameters to align containers v1.1

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </header>
     <main>
         <section class="element_title" id="aboutme">
-            <p>About Me</p>
+            <a>About Me</a>
         </section>
         <section class="element_content">
             <p>Write a paragraph here about me</p>
