--- a/wireframe model/container.html
+++ b/wireframe model/container.html
@@ -4,18 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tom Fusco's Web Journey</title>
-    <link rel="stylesheet" href="./assets/css/reset.css" />
-    <link rel="stylesheet" href="./assets/css/test.css" />
+    <title>Container & Box Model Experiment</title>
+    <link rel="stylesheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="./assets/container.css">
 </head>
 
 <body>
     <header>
-        <h1>Tom Fusco</h1>
-        <nav>               
+        <a>This is the header</a>
+        <nav>
             <ul>
                 <li>
-                    <a href="#aboutme">About Me</a>
+                    <a href=#aboutme>About Me</a>
                 </li>
                 <li>
                     <a href="#work">Work</a>
@@ -29,15 +29,18 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <section class="element_title" id="aboutme">
-            <a>About Me</a>
-        </section>
-        <section class="element_content">
-            <a>Write a paragraph here about me</a>
-        </section>
-    </main>
-
+    <section id="aboutme">
+        This is the about me box
+    </section>
+    <section id="work">
+        This is the work box
+    </section>
+    <section id="resume">
+        This is the resume box
+    </section>
+    <footer id="contactme">
+        This is the contact me footer
+    </footer>
 </body>
 
 </html>
