More work on wireframe in getting elements to behave properly

--- a/wireframe/container.html
+++ b/wireframe/container.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Container & Box Model Experiment</title>
     <link rel="stylesheet" href="./assets/css/reset.css">
-    <link rel="stylesheet" href="./assets/container.css">
+    <link rel="stylesheet" href="./container.css">
 </head>
 
 <body>
+    <!-- This is the header with nav links to the topics (sections) -->
     <header>
-        <a>This is the header</a>
+        <h1><span class="headername">Name here</span></h1>
         <nav>
             <ul>
                 <li>
@@ -30,16 +31,17 @@
         </nav>
     </header>
     <section id="aboutme">
-        This is the about me box
+        <h1>About <br>Me</h1>
+        <p>This is the about me paragraph bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb</p>
     </section>
     <section id="work">
-        This is the work box
+        <h1>Work</h1>
     </section>
     <section id="resume">
-        This is the resume box
+        <h1>Resume</h1>
     </section>
     <footer id="contactme">
-        This is the contact me footer
+        <h1>Contact Me</h1>
     </footer>
 </body>
 
