Continuing to improve on wireframe model

--- a/wireframe/container.html
+++ b/wireframe/container.html
@@ -10,9 +10,11 @@
 </head>
 
 <body>
-    <!-- This is the header with nav links to the topics (sections) -->
+    <!-- This is the header with nav links to the topics (sections) 
+    Q:  how do I make the header highlighting extend left to border of header 
+        like in the example picture ?   -->
     <header>
-        <h1><span class="headername">Name here</span></h1>
+        <h1><span class="headername">Tom Fusco</span></h1>
         <nav>
             <ul>
                 <li>
