--- a/resume.html
+++ b/resume.html
@@ -34,7 +34,7 @@
 				at through people, process and technology innovations. Prior to these assignments,
 				Tom completed a delivery excellence Project Executive role on several multi-million dollar
 				programs which include State Bank of India (SBI), Express Scripts (ESI), Blue Cross
-				Blue Shields, American Express, Citi, NASCO, Global Foundries Data Separation,
+				Blue Shield, American Express, Citi, NASCO, Global Foundries Data Separation,
 				ANBID (Brazil Bank Consortium), Vodafone India and Turkey (Telecom),
 				Panorama Canadian Public Health, TruEnergy, Telstra, Lenovo, NiSource, and
 				Philips Consumer Electronics. These projects have in common Complex system integration
