Fixed hover functionality and updated readme.md

--- a/resume.html
+++ b/resume.html
@@ -26,8 +26,7 @@
 			<h2>Professional Profile</h2>
 			<p>Tom Fusco recently retired from IBM (30 June 2022) where Tom was a Partner within the GBS
 				NA Cloud Application Innovation organization. Most recently Tom, completed three international
-				assignments:
-				Indian Oil Corporation Limited (IOCL), Vodafone India Development and Operations
+				assignments: Indian Oil Corporation Limited (IOCL), Vodafone India Development and Operations
 				delivery and Etihad Airways Transformation executive in Abu Dhabi. The objective of these
 				assignments was to better integrate the development and operations towers to provide a
 				“ONE-IBM” experience for the Client in Vodafone and to fundamentally transform the operations
@@ -46,16 +45,13 @@
 			<p>Starting in 1979 as an engineer at IBM Federal Systems in Manassas VA, Mr. Fusco has thirty plus years of
 				experience in the field of large scale Federal, DoD and Commercial systems integration. Mr. Fusco has
 				held various technical and program management assignments spanning the program life-cycle from research,
-				to
-				design and development, systems engineering to integration, and fielding of large-scale systems.
+				to design and development, systems engineering to integration, and fielding of large-scale systems.
 			</p>
 
 			<p>Mr. Fusco has a BS in Electrical Engineering from the University of Maryland. Mr. Fusco is a certified
 				Senior Federal Systems Architect, a certified PMP® and a Certified IBM Executive Level Project Manager.
-				Mr.
-				Fusco is a member of the University of Central Florida’s Industrial Advisory Board for Electrical and
-				Computer
-				Engineering Department.
+				Mr. Fusco is a member of the University of Central Florida’s Industrial Advisory Board for Electrical and
+				Computer Engineering Department.
 			</p>
 		</section>
 		<section>
