--- a/index.html
+++ b/index.html
@@ -24,7 +24,15 @@
     <main>
         <section id="aboutme" class="section_topic">
             <h2>About <br>Me</h2>
-            <p>This is the about me paragraph bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb</p>
+            <p>Mr. Fusco has a batchelor degree in electrical engineering from University of Maryland. Mr. Fusco has thirty plus years of
+				experience in the field of large scale Federal, DoD and Commercial systems integration at IBM and Lockheed Martin. Mr. Fusco has
+				held various technical and program management assignments spanning the program life-cycle from research,
+				to design and development, systems engineering to integration, and fielding of large-scale systems. Mr. Fusco retired from IBM in June 2022 and is now taking 
+                 a bootcamp course in full stack web development at the University of Central Florida. Mr. Fusco hopes to pursue a second career in coding and believes he can bring great 
+                 value to a company with working with development teams bring to bear newly acquired coding skills with his
+                 deep engineering and management experience from his previous career.
+
+			</p>
         </section>
         <section id="work" class="section_topic">
             <h2>Work</h2>
