--- a/Assets/html/resume.html
+++ b/Assets/html/resume.html
@@ -5,23 +5,25 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Tom Fusco Resume</title>
-	<link rel="stylesheet" href="./assets/css/reset.css">
-	<link rel="stylesheet" href="./assets/css/resume.css">
+	<link rel="stylesheet" href="../css/reset.css">
+	<link rel="stylesheet" href="../css/resume.css">
 </head>
 
 <body>
+	<!-- set the header elements and content*/-->
 	<header class="header_top">
-		<img src="./Assets/images/tom.jpg" alt="picture">
+		<img src="../images/tom.jpg" alt="picture">
 		<h1><span class="headername">Tom Fusco</span></h1>
 		<nav>
 			<ul>
 				<li>email: smokerdog57@gmail.com</li>
 				<li>mobile: (941) 221-1132</li>
-				<li>Linkedin:</li>
+				<li>linked in: https://www.linkedin.com/in/tom-fusco/ </li>
 			</ul>
 		</nav>
 	</header>
 	<main>
+		<!-- set the section elements and content*/-->
 		<section>
 			<h2>Professional Profile</h2>
 			<p>Tom Fusco recently retired from IBM (30 June 2022) where Tom was a Partner within the GBS
@@ -30,8 +32,9 @@
 				delivery and Etihad Airways Transformation executive in Abu Dhabi. The objective of these
 				assignments was to better integrate the development and operations towers to provide a
 				“ONE-IBM” experience for the Client in Vodafone and to fundamentally transform the operations
-				at through people, process and technology innovations. Prior to these assignments,
-				Tom completed a delivery excellence Project Executive role on several multi-million dollar
+				at through people, process and technology innovations.</p>
+				
+			<p>Prior to these assignments, Tom completed a delivery excellence Project Executive role on several multi-million dollar
 				programs which include State Bank of India (SBI), Express Scripts (ESI), Blue Cross
 				Blue Shield, American Express, Citi, NASCO, Global Foundries Data Separation,
 				ANBID (Brazil Bank Consortium), Vodafone India and Turkey (Telecom),
@@ -66,52 +69,35 @@
 		<section>
 			<h2>Assignment History</h2>
 
-			<p>SEA&T Director. Tom Fusco was Director of the Systems Engineering, Architecture and Test (SEA&T)
+			<p><b>SEA&T Director.</b> Tom Fusco was Director of the Systems Engineering, Architecture and Test (SEA&T)
 				practice.
 				The practice is responsible for providing leading SEA&T services for large complex system integration,
 				transition and transformation outsourcing and out-tasking programs.</p>
 
-			<p>Sr DPE on ANBID account. Founded in 1967, ANBID is the Main representative of the financial institutions
-				operating in
-				the Brazilian capital markets. This includes investment banks with asset management, corporate finance,
+			<p><b>Sr DPE on ANBID account.</b> Founded in 1967, ANBID is the Main representative of the financial institutions
+				operating in the Brazilian capital markets. This includes investment banks with asset management, corporate finance,
 				private banking, and security service support. The project is an information exchange system that will
-				be
-				used by
-				ANBID's associates (major banks in Brazil) to exchange investment funds information. This system will
-				allow
-				banks to reduce improve their operation, reduce risks and have a more transparent process. Mr. Fusco led
-				the
-				remediation for the system testing, scope management and governance and overarching project management
+				be used by ANBID's associates (major banks in Brazil) to exchange investment funds information. This system will
+				allow banks to reduce improve their operation, reduce risks and have a more transparent process. Mr. Fusco led
+				the	remediation for the system testing, scope management and governance and overarching project management
 				system by implementing the Critical Path Planning (CPP) Methodology and Management System which Mr.
-				Fusco
-				devised.
-				Successful results on iteration 2 led to new opportunity for improving scope and requirements management
-				on
-				iteration 3 and thus avoiding program cancellation.
+				Fusco devised. Successful results on iteration 2 led to new opportunity for improving scope and requirements management
+				on iteration 3 and thus avoiding program cancellation.
 			</p>
 
-			<p>Sr DPE at Global Foundries. GLOBALFOUNDRIES is a global semiconductor manufacturing enterprise formed by
-				a
-				joint venture between AMD and the Advanced Technology Investment Company (ATIC) utilizing the assets of
-				the
-				former manufacturing and process technology development arm of Advanced Micro Devices (AMD). IBM was
-				chosen
-				as the system integrator responsible to assist GLOBALFOUNDRIES with the split from Parent company and
+			<p><b>Sr DPE at Global Foundries.</b> GLOBALFOUNDRIES is a global semiconductor manufacturing enterprise formed by
+				a joint venture between AMD and the Advanced Technology Investment Company (ATIC) utilizing the assets of
+				the	former manufacturing and process technology development arm of Advanced Micro Devices (AMD). IBM was
+				chosen as the system integrator responsible to assist GLOBALFOUNDRIES with the split from Parent company and
 				facilitate the IT separation of the two companies. IBM is also assisting GLOBALFOUNDRIES in designing
-				the
-				future IT
-				landscape and business solutions including the design and implementation of the Supply Chain and
+				the	future IT landscape and business solutions including the design and implementation of the Supply Chain and
 				Order-to-cash implementations. After being called in by the Global Foundries CIO, Mr. Fusco led the
-				remediation for the
-				pre-Go Live testing and the Cutover. The effort was highly successful in that “Go Live” was achieved
-				within
-				30
-				minutes of plan which was constructed using Monte Carlo simulation in conjunction with the Critical Path
-				Planning
-				(CPP)Methodology and Management System which Mr. Fusco devised.
+				remediation for the	pre-Go Live testing and the Cutover. The effort was highly successful in that “Go Live” was achieved
+				within 30 minutes of plan which was constructed using Monte Carlo simulation in conjunction with the Critical Path
+				Planning (CPP)Methodology and Management System which Mr. Fusco devised.
 			</p>
 
-			<p>Sr DPE at Pan-Canadian Public Health. Panorama is a world-class, enterprise-scale application developed
+			<p><b>Sr DPE at Pan-Canadian Public Health.</b> Panorama is a world-class, enterprise-scale application developed
 				by IBM Canada for use by regional and national public health organizations in the prevention,
 				identification, treatment and management of disease and major outbreaks. Developed in response to Canada's 2003 SARS event, its
 				evolution has resulted in pragmatic first-of-a-kind solutions to complex public policy and public health
@@ -121,70 +107,73 @@
 				Infoway provided the funding through its delegate the BC Ministry of Health with the expectation that it would
 				be adopted by each jurisdiction in Canada. Delivery Excellence feedback from Sharon Hartung, Canada
 				Delivery Excellence Leader: “There were several key things you contributed to this project, that were invaluable
-				to enabling the team to meet the challenging project goals and ultimately complete the engagement:
-
-				1. Within several weeks of you arriving in April, you took control of the on-ground delivery team and
+				to enabling the team to meet the challenging project goals and ultimately complete the engagement:</p>
+				
+				<p> 1. Within several weeks of you arriving in April, you took control of the on-ground delivery team and
 				helped them stabilize the code promotion and build process. This being the most complex system integration
 				project that Canada has seen, your large AD/SI project experience was key in bring the best of breed practices in
 				integrating what now is 6 Public Health Business Applications as well as 17 supporting Applications. This event
 				alone, I personally appreciated, as it allowed me to shift necessary focus back to the direct client as well as
-				the	Pan-Canadian Community.
+				the	Pan-Canadian Community.</p>
 
-				2. Secondly, you assisted me in further optimizing the team size which was critical in meeting the
+				<p> 2. Secondly, you assisted me in further optimizing the team size which was critical in meeting the
 				financial goals. You accomplished this through a highly effective development & tracking system, aligning micro
 				tasks and outcomes. We used this to determine the effects of various actions, and could immediately determine if
 				the	action had the necessary effect or another action was required. This is extremely valuable ICAP, and
-				every custom AD/SI Team should use this system.
+				every custom AD/SI Team should use this system.</p>
 
-				3. Thirdly, and the most notable for me being a fellow ex-military member; was the personal energy and
+				<p> 3. Thirdly, and the most notable for me being a fellow ex-military member; was the personal energy and
 				focus on mentoring of the next generation of leaders; you have helped develop a new crop of leaders, from many
 				band 7s, and 8s - you pushed them, challenged them, supported them and ultimately they now have a new level of
 				skill and leadership capability (to name only a few, Carole Clem, Yvette Wells, Henry Lam, Dan Wiebe, Humie Leung,
 				Joyce Wong, Scott Hayward). I also enjoyed our many discussions, and comparing of recovery strategies, I am
-				sure our respective notebooks have many new ideas.
+				sure our respective notebooks have many new ideas.</p>
 			</p>
 
-			<p>Sr DPE in the Telecom, Distribution & Supply Chain Sectors. Mr. Fusco was the executive responsible for
+			<p><b>Sr DPE in the Telecom, Distribution & Supply Chain Sectors.</b> Mr. Fusco was the executive responsible for
 				red project recovery operations within the Procure-to-Pay Service Offering, the Lenovo HR program, the
 				American Express Mid Range Optimization IT-SO program, Australia’s TRUenergy and Telstra programs. These
 				engagements were highly successful in that Mr. Fusco was able to turn this programs around in short order (less than 6
 				months). Now the programs are delivering on schedule using the Critical Path Planning (CPP) Methodology and
-				Management System which Mr. Fusco devised.
-				• NiSource Program Chief Engineer. Mr. Fusco was the Chief Engineer for the NiSource program which is a
-				10 year $1.6B program. NiSource is a large E&U company and was BTO’s largest win to date. NiSource
+				Management System which Mr. Fusco devised.</p>
+
+			<p><b>NiSource Program Chief Engineer.</b> Mr. Fusco was the Chief Engineer for the NiSource program which is a
+				10 year $1.6B program. NiSource is a larsge E&U company and was BTO’s largest win to date. NiSource
 				combined IT	Outsourcing, Business Transformation Outsourcing, Data Center Consolidation and Operations, and HR
-				transition of NiSource workforce to IBM.
-				• Senior Business Area Manager. Mr. Fusco was the Senior BAM responsible for the IBM Global Account
+				transition of NiSource workforce to IBM.</p>
+
+			<p><b>Senior Business Area Manager.</b> Mr. Fusco was the Senior BAM responsible for the IBM Global Account
 				Strategic Direct and HV/EC value chain test solutions. Mr. Fusco led a global team of 100 test
 				professionals that provided integrated testing solutions composed of functional testing, system integration testing, and
 				performance/availability testing. Prior to this role, Mr. Fusco was the Senior BAM responsible for
 				performance and stress test for applications within the IBM account. Mr. Fusco led a Test Optimization
 				effort that	was instrumental in significant cost reductions for the Easy Access, CHW and HV/EC value chains in 2002.
 				Mr.	Fusco also transformed the way in which the Global Test Organization engaged large value chain projects
-				by implementing an integrated test team approach that lowered cost and reduced cycle time.
+				by implementing an integrated test team approach that lowered cost and reduced cycle time.</p>
 				• Aerospace Technical Director. Mr. Fusco was the Technical Director and Technical Proposal Manager for
 				a multinational consortium whose primary focus was winning the British Army Armoured Vehicle Training
 				Service program. This $1B Private Finance Initiative was a new business opportunity that involved
 				privatization of British Army training services including complete management and turnkey operation of the Armour
-				Centre and Field Army Garrisons throughout the UK and Germany.
-				• Aerospace Chief Engineer. As Chief Engineer, Mr. Fusco provided leadership and direction to an
+				Centre and Field Army Garrisons throughout the UK and Germany.</p>
+
+			<p><b>Aerospace Chief Engineer.</b> As Chief Engineer, Mr. Fusco provided leadership and direction to an
 				integrated development team of 300 engineers for the US Army’s $200M Close Combat Tactical Trainer
 				program. The projects involved designing, developing, testing and implementing a training simulation system designed
 				to provide tactical training. The US Close Combat Trainer project was so successful that it led to the
 				winning of a $270M sole source contract with the UK Ministry of Defence for a similar training system. As Chief
 				Engineer, Mr. Fusco led the multinational integrated development team that was composed of integrated product
 				teams from several large international aerospace companies. Most recently, the UK Combined Arms Tactical Trainer
-				was cited in the Guiness Book of World Records as the most sophisticated battlefield simulator.
-				• Aerospace Test Director. Mr. Fusco was a member of the proposal team that won a major space borne
+				was cited in the Guiness Book of World Records as the most sophisticated battlefield simulator.</p>
+
+			<p><b>Aerospace Test Director.</b>Mr. Fusco was a member of the proposal team that won a major space borne
 				processor program and was subsequently named the Test Director for the program. The processor made
 				history in April 1993 as IBM’s first MIL-STD-1540 space qualified processor. Mr. Fusco managed several shipboard
 				combat system integration programs. He managed the system architecture group responsible for the architecture,
 				development, integration and test of a submarine combat system. Mr. Fusco was responsible for the
 				installation of the system and his experience includes sea trials with an earlier advanced development model. In these
-				assignments, Mr. Fusco earned three IBM Outstanding Achievements Awards and numerous informal awards.
-			</p>
+				assignments, Mr. Fusco earned three IBM Outstanding Achievements Awards and numerous informal awards.</p>
 		</section>
-		<section>
+		<section>			
 			<h2>Education and Background</h2>
 			<ul>
 				<li>Certified Senior Federal Systems Architect</li>
@@ -192,10 +181,10 @@
 				<li>Certified IBM Executive Level Project Manager</li>
 				<li>B.S. of Electrical Engineering from the University of Maryland</li>
 				<li>Member of the University of Central Florida’s Industrial Advisory Board for Electrical and Computer
-					Engineering Department
-				</li>
+					Engineering Department</li>
 			</ul>
 		</section>
+		
 	</main>
 
 </body>
