--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- Invoked reset.css to remove any browser unique bahavior-->
 <head>
     <title>Flexbox Alignment</title>
     <meta charset="UTF-8" />
@@ -8,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/reset.css" />
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
 </head>
-
+<!-- Setup the header with my picture and links-->
 <body>
     <header>
         <img class="tom" src="assets/images/tom.jpg" alt="Picture of Tom">
@@ -17,10 +18,10 @@
             <a href="#aboutme">About Me</a>
             <a href="#work">Work</a>
             <a href="#contactme">Contact Me</a>
-            <a href="#resume">Resume</a>
+            <a href="Assets/html/resume.html">Resume</a>
         </nav>
     </header>
-    
+    <!--These are the main topic areas-->
     <main>
         <section id="aboutme" class="section_topic">
             <h2>About <br>Me</h2>
@@ -28,8 +29,9 @@
 				experience in the field of large scale Federal, DoD and Commercial systems integration at IBM and Lockheed Martin. Mr. Fusco has
 				held various technical and program management assignments spanning the program life-cycle from research,
 				to design and development, systems engineering to integration, and fielding of large-scale systems. Mr. Fusco retired from IBM in June 2022 and is now taking 
-                 a bootcamp course in full stack web development at the University of Central Florida. Mr. Fusco hopes to pursue a second career in coding and believes he can bring great 
-                 value to a company with working with development teams bring to bear newly acquired coding skills with his
+                 a bootcamp course in full stack web development at the University of Central Florida. 
+                 Mr. Fusco hopes to transition to his passion for coding and believes he can bring great 
+                 value to a company by working with development teams leveraging newly acquired coding skills with his
                  deep engineering and management experience from his previous career.
 
 			</p>
@@ -37,30 +39,45 @@
         <section id="work" class="section_topic">
             <h2>Work</h2>
             <section class="card_container">
+                <!-- This first card has a live link-->
                 <section class="card">
                     <a href="https://smokerdog57.github.io/refactoring/" target="__blank">
                         <header>Horiseon</header>
                         <img src="./Assets/images/digital-marketing-meeting.jpg" alt="Tablet">
                     </a>
                 </section>
+                <!-- This is a under construction placeholder ie no live link will be built out later-->
                 <section class="card">
                     <header>Tablet</header>
                     <img src="./Assets/images/tablet.jpg" alt="Tablet">
                 </section>
+                <!-- This is a under construction placeholder ie no live link will be built out later-->
                 <section class="card">
                     <header>Camera</header>
                     <img src="./Assets/images/camera.jpg" alt="Picture of a camera">
                 </section>
+                <!-- This is a under construction placeholder ie no live link will be built out later-->
                 <section class="card">
                     <header>Wooden Spoons</header>
                     <img src="./Assets/images/wooden-spoons.jpg" alt="Picture of Wooden Spoons">
                 </section>
             </section>
         </section>
+        <!-- Contact me section with links to GitHub and Linked In-->
         <section id="contactme" class="section_topic">
             <h2>Contact Me</h2>
-            <p><b>Mobile:</b> (941) 221-1132&nbsp&nbsp&nbsp&nbsp<b>email:</b> smokerdog57@gmail.com&nbsp&nbsp&nbsp&nbsp<b>GitHub:</b> https://github.com/smokerdog57/Portfolio</p>
+            <p><b>Mobile:</b> (941) 221-1132&nbsp&nbsp&nbsp&nbsp
+                <b>email:</b> smokerdog57@gmail.com&nbsp&nbsp&nbsp&nbsp
+            <a href="https://github.com/smokerdog57/Portfolio" target="__blank">GitHub</a>
+                &nbsp&nbsp&nbsp&nbsp
+            <a href="https://www.linkedin.com/in/tom-fusco/" target="__blank">Linked in</a></p>
         </section>
+    </main>
+    <!-- Footer with attribution-->
+    <footer>
+        <h2>Made with ❤️️ by Tom Fusco</h2>
+        <p>&copy; 2023 edX Boot Camps LLC. Confidential and Proprietary. All Rights Reserved.</p>
+    </footer>
 
 </body>
 
