Fixing broken Assets reference

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>Flexbox Alignment</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="./assets/css/reset.css" />
-    <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="./Assets/css/reset.css" />
+    <link rel="stylesheet" type="text/css" href="./Assets/css/style.css" />
 </head>
 <!-- Setup the header with my picture and links-->
 <body>
     <header>
-        <img class="tom" src="assets/images/tom.jpg" alt="Picture of Tom">
+        <img class="tom" src="Assets/images/tom.jpg" alt="Picture of Tom">
         <h1>Tom<br>Fusco</h1>
         <nav>
             <a href="#aboutme">About Me</a>
