fixing asset directory case bug

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Flexbox Alignment</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="./Assets/css/reset.css" />
-    <link rel="stylesheet" type="text/css" href="./Assets/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="./assets/css/reset.css" />
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
 </head>
 <!-- Setup the header with my picture and links-->
 <body>
@@ -18,7 +18,7 @@
             <a href="#aboutme">About Me</a>
             <a href="#work">Work</a>
             <a href="#contactme">Contact Me</a>
-            <a href="Assets/html/resume.html">Resume</a>
+            <a href="assets/html/resume.html">Resume</a>
         </nav>
     </header>
     <!--These are the main topic areas-->
@@ -43,23 +43,23 @@
                 <section class="card">
                     <a href="https://smokerdog57.github.io/refactoring/" target="__blank">
                         <header>Horiseon</header>
-                        <img src="./Assets/images/digital-marketing-meeting.jpg" alt="Tablet">
+                        <img src="./assets/images/digital-marketing-meeting.jpg" alt="Tablet">
                     </a>
                 </section>
                 <!-- This is a under construction placeholder ie no live link will be built out later-->
                 <section class="card">
                     <header>Tablet</header>
-                    <img src="./Assets/images/tablet.jpg" alt="Tablet">
+                    <img src="./assets/images/tablet.jpg" alt="Tablet">
                 </section>
                 <!-- This is a under construction placeholder ie no live link will be built out later-->
                 <section class="card">
                     <header>Camera</header>
-                    <img src="./Assets/images/camera.jpg" alt="Picture of a camera">
+                    <img src="./assets/images/camera.jpg" alt="Picture of a camera">
                 </section>
                 <!-- This is a under construction placeholder ie no live link will be built out later-->
                 <section class="card">
                     <header>Wooden Spoons</header>
-                    <img src="./Assets/images/wooden-spoons.jpg" alt="Picture of Wooden Spoons">
+                    <img src="./assets/images/wooden-spoons.jpg" alt="Picture of Wooden Spoons">
                 </section>
             </section>
         </section>
