--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
                 </section>
                 <!-- This is a under construction placeholder ie no live link will be built out later-->
                 <section class="card">
-                    <header>Tablet</header>
-                    <img src="./Assets/images/tablet.jpg" alt="Tablet">
+                    <header>WeatherApp</header>
+                    <img src="./Assets/images/landingpage.png" alt="WeatherApp">
                 </section>
                 <!-- This is a under construction placeholder ie no live link will be built out later-->
                 <section class="card">
                     <header>Camera</header>
-                    <img src="./Assets/images/camera.jpg" alt="Picture of a camera">
+                    <img src="./Assets/images/Spaceman.PNG" alt="Picture of a Spaceman">
                 </section>
                 <!-- This is a under construction placeholder ie no live link will be built out later-->
                 <section class="card">
